# framelesshelper

./: CMakeLists.txt  TODO.md
examples/: CMakeLists.txt  demo.manifest  demo.rc
src/: CMakeLists.txt
src/core/: CMakeLists.txt  core.h  core.qrc  core.rc  core_windows.h  customwindow_global.h  draw.cpp  draw.h  settings.cpp  settings.h  systemeventhandler.h  systemeventhandler_win32.cpp  systemeventhandler_x11.cpp  utils.cpp  utils.h  utils_darwin.mm  utils_win32.cpp  utils_win32.h  utils_x11.cpp  window.cpp
src/quick/: quick.rc
src/widget/: CMakeLists.txt  customtitlebar.cpp  customtitlebarwidget.cpp  customwidget.cpp  customwidget.h  customwidget_darwin.cpp  customwidget_p.h  customwidget_p_win32.h  customwidget_win32.cpp  customwidget_x11.cpp  widget.rc
